Feature #3111. Add a link to send a message to the user. Now the button to tchat with the user is disabled when he is'nt connected

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
@@ -294,7 +294,7 @@ GML.user.type.K = Classification scheme manager
 GML.user.type.U = User
 GML.user.type.G = Guest
 
-GML.notification.send = Envoyer un message
+GML.notification.send = Send a message
 GML.notification.subject = Subject
 GML.notification.message = Message
 
