closing feature #3284 (new search results facet "type of contribution")

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_de.properties
@@ -274,6 +274,8 @@ pdcpeas.didYouMean= Meinten Sie :
 # Facet group search message
 pdcPeas.facet.author= Author	  	 
 pdcPeas.facet.service= Anwendung
+pdcPeas.facet.datatype= Art des Beitrags
+
 pdcPeas.facet.tooltip.enable= Klicken Sie hier um die Suche auf * zu verfeinern
 pdcPeas.facet.tooltip.disable= Klicken Sie hier um den Suchfilter auf * zu l\u00f6schen
 pdcPeas.facet.toggle.show = Alles anzeigen
