--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
@@ -180,7 +180,7 @@ pdcPeas.definition = Definition
 pdcPeas.valeur = Value
 pdcPeas.emplacement = Place
 pdcPeas.definition = Definition
-pdcPeas.searchType = Publication type
+pdcPeas.searchType = Contribution type
 
 pdcPeas.glossaire_to_view = Display glossary
 pdcPeas.tracker_to_select = Validate selection
@@ -283,6 +283,7 @@ pdcpeas.didYouMean= Did You mean  :
 # Facet group search message
 pdcPeas.facet.author= Author
 pdcPeas.facet.service= Application
+pdcPeas.facet.datatype= Type of contribution
 pdcPeas.facet.tooltip.enable= Click to show only '*' results
 pdcPeas.facet.tooltip.disable= Click to cancel '*' filter results
 pdcPeas.facet.toggle.show = Display all
