--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_fr.properties
@@ -277,6 +277,7 @@ pdcpeas.didYouMean= Essayez avec cette orthographe :
 # Facet group search message
 pdcPeas.facet.author= Auteur
 pdcPeas.facet.service= Application
+pdcPeas.facet.datatype= Type de contribution
 pdcPeas.facet.tooltip.enable= Cliquer pour affiner la recherche sur *
 pdcPeas.facet.tooltip.disable= Cliquer pour supprimer le filtre sur *
 pdcPeas.facet.toggle.show = Tout afficher
