Feature #3110 : wiring delayed notification tools

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationManager/multilang/notificationManagerBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationManager/multilang/notificationManagerBundle_de.properties
@@ -73,3 +73,8 @@ resourceActionCREATE=erstellt
 resourceActionUPDATE=aktualisiert
 resourceActionDELETE=entfernt
 resourceActionREPORT=berichtet
+resourceActionCOMMENT=kommentiert
+resourceActionSUSPEND=eingestellt
+resourceActionPENDING_VALIDATION=ausstehende Validierung
+resourceActionREFUSE=abgelehnt
+resourceActionVALIDATE=validiert
