--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationManager/multilang/notificationManagerBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationManager/multilang/notificationManagerBundle_en.properties
@@ -73,3 +73,8 @@ resourceActionCREATE=created
 resourceActionUPDATE=updated
 resourceActionDELETE=deleted
 resourceActionREPORT=reported
+resourceActionCOMMENT=commented
+resourceActionSUSPEND=suspended
+resourceActionPENDING_VALIDATION=pending validation
+resourceActionREFUSE=refused
+resourceActionVALIDATE=validated
