--- a/lib-core/src/test/resources/com/stratelia/silverpeas/notificationManager/multilang/notificationManagerBundle_fr.properties
+++ b/lib-core/src/test/resources/com/stratelia/silverpeas/notificationManager/multilang/notificationManagerBundle_fr.properties
@@ -38,3 +38,4 @@ resourceActionCREATE=cr\u00e9\u00e9e
 resourceActionUPDATE=modifi\u00e9e
 resourceActionDELETE=supprim\u00e9e
 resourceActionREPORT=signal\u00e9e
+resourceActionCOMMENT=comment\u00e9e
