Feature #3110 : adding english StringTemplates

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationManager/multilang/notificationManagerBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationManager/multilang/notificationManagerBundle_en.properties
@@ -65,9 +65,9 @@ frequencyDAILY=daily
 frequencyWEEKLY=weekly
 frequencyMONTHLY=monthly
 
-delayDAILY=one day
-delayWEEKLY=one week
-delayMONTHLY=one month
+delayDAILY=tomorrow
+delayWEEKLY=this next week
+delayMONTHLY=this next month
 
 resourceActionCREATE=created
 resourceActionUPDATE=updated
