--- a/lib-core/src/test/resources/com/stratelia/silverpeas/notificationManager/multilang/notificationManagerBundle_en.properties
+++ b/lib-core/src/test/resources/com/stratelia/silverpeas/notificationManager/multilang/notificationManagerBundle_en.properties
@@ -26,16 +26,20 @@
 #
 
 # Definitions about delayed notifications
-frequencyDAILY=quotidienne
-frequencyWEEKLY=hebdomadaire
-frequencyMONTHLY=mensuelle
+frequencyDAILY=daily
+frequencyWEEKLY=weekly
+frequencyMONTHLY=monthly
 
-delayDAILY=demain
-delayWEEKLY=la semaine prochaine
-delayMONTHLY=le mois prochain
+delayDAILY=tomorrow
+delayWEEKLY=this next week
+delayMONTHLY=this next month
 
-resourceActionCREATE=cr\u00e9\u00e9e
-resourceActionUPDATE=modifi\u00e9e
-resourceActionDELETE=supprim\u00e9e
-resourceActionREPORT=signal\u00e9e
-resourceActionCOMMENT=comment\u00e9e
+resourceActionCREATE=created
+resourceActionUPDATE=updated
+resourceActionDELETE=deleted
+resourceActionREPORT=reported
+resourceActionCOMMENT=commented
+resourceActionSUSPEND=suspended
+resourceActionPENDING_VALIDATION=pending validation
+resourceActionREFUSE=refused
+resourceActionVALIDATE=validated
