Feature #3110 : adding resource description in synthesis

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationManager/multilang/notificationManagerBundle_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationManager/multilang/notificationManagerBundle_de.properties
@@ -65,9 +65,9 @@ frequencyDAILY=T\u00e4glich
 frequencyWEEKLY=W\u00f6chentlich
 frequencyMONTHLY=Monatlich
 
-delayDAILY=ein Tag
-delayWEEKLY=eine Woche
-delayMONTHLY=eine Monat
+delayDAILY=morgen
+delayWEEKLY=n\u00e4chste Woche
+delayMONTHLY=n\u00e4chsten Monat
 
 resourceActionCREATE=erstellt
 resourceActionUPDATE=aktualisiert
