--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/multilang/personalizationBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/multilang/personalizationBundle_en.properties
@@ -63,3 +63,12 @@ SendedUserNotifications = Sent
 Notifier = Send a notification
 MessageSuppressionCanal = Do you really want to delete this channel?
 MessageSuppressionRegle = Do you really want to delete this guideline?
+
+channelChoiceLabel = Notification channel choice :
+frequencyChoiceLabel = Mail reception frequency :
+
+frequencyDefault=Default ({0})
+frequencyNONE=Instantly
+frequencyDAILY=Daily
+frequencyWEEKLY=Weekly
+frequencyMONTHLY=Monthly
