updating some English translations

--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationManager/multilang/notificationManagerBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationManager/multilang/notificationManagerBundle_en.properties
@@ -66,8 +66,8 @@ frequencyWEEKLY=weekly
 frequencyMONTHLY=monthly
 
 delayDAILY=tomorrow
-delayWEEKLY=this next week
-delayMONTHLY=this next month
+delayWEEKLY=next week
+delayMONTHLY=next month
 
 resourceActionCREATE=created
 resourceActionUPDATE=updated
