Feature #3111. Integrate the change in the work of Aurore. Improve the placement of the userzoom tooltip. Fix some misbehaviour with IE7.

--- a/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle_de.properties
@@ -127,3 +127,4 @@ myProfile.status.timeout = Ihre Sitzung ist abgelaufen. Ihr Status konnte nicht 
 tchat=Diskutieren
 connected=verbunden
 notConnected=nicht verbunden
+ToContact=Kontakt
