--- a/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/socialNetwork/multilang/socialNetworkBundle_en.properties
@@ -101,3 +101,4 @@ myProfile.status.timeout = Your session has expired. Your status could not be sa
 tchat=Tchat
 connected=connected
 notConnected=not connected
+ToContact=Contact
