--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
@@ -103,7 +103,7 @@ GML.lastName                                            = Name
 GML.management						= Verwaltung
 GML.messages						= Meldungen
 GML.minimize					        = Minimieren
-GML.modify						= \u00C4ndern
+GML.modify						= \u00c4ndern
 GML.month 						= Monat
 GML.move						= Verschieben
 
@@ -133,15 +133,15 @@ GML.paste						= Einf\u00fcgen
 GML.path						= Speicherort
 GML.phoneNumber 					= Telefon
 GML.position 						= Posten
-GML.public 						= \u00D6ffentlich
+GML.public 						= \u00d6ffentlich
 GML.preview						= Vorschau
 GML.previous						= Zur\u00fcck
 GML.print						= Drucken
 GML.priority 						= Priorit\u00e4t
 GML.privateFS 						= Private
 GML.privateMS 						= Privater
-GML.publication						= Veröffentlichung
-GML.publications					= Veröffentlichungen
+GML.publication						= Ver\u00c3\u00b6ffentlichung
+GML.publications					= Ver\u00c3\u00b6ffentlichungen
 GML.publish						= Ver\u00f6ffentlichen
 
 GML.restore						= Wiederherstellen
@@ -266,7 +266,7 @@ GML.creationDate = Erstellt am
 GML.updateDate = Ge\u00e4ndert am
 
 GML.language = Sprache
-GML.translationRemove =  Diese \u00DCbersetzung l\u00f6schen
+GML.translationRemove =  Diese \u00dcbersetzung l\u00f6schen
 
 # Import CSV
 GML.csvFile = CSV Datei
@@ -274,7 +274,7 @@ GML.ligne = - Reihe
 GML.colonne = Spalte 
 GML.valeur = Wert
 GML.obligatoire = Dieses Feld ist obligatorisch
-GML.nbCarMax = Der Wert darf nicht \u00DCberschritten werden
+GML.nbCarMax = Der Wert darf nicht \u00dcberschritten werden
 GML.nbCarMin = Der Wert muss mindestens 
 GML.caracteres = Zeichen enthalten
 GML.errorCsvFile = Fehler! Mann kann nur Dateien hochladen, die die der Erweiterung .Csv haben
@@ -328,6 +328,6 @@ GML.pagination.LastPage=>>
 GML.pagination.ScrollNextPages=>
 GML.pagination.ScrollPreviousPages=<
 GML.pagination.GoToPage=Seite
-GML.internalDomain=Gemischte Domäne
+GML.internalDomain=Gemischte Dom\u00c3\u00a4ne
 
 GML.selectAValue = Bitte w\u00e4hlen Sie einen Wert aus
