Feature #3110 : some adjustments - modifying the search of an existing resource - adding a validation message on the screen of user's notification settings - correcting a technical issue

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
@@ -331,3 +331,8 @@ GML.pagination.GoToPage=Seite
 GML.internalDomain=Gemischte Domäne
 
 GML.selectAValue = Bitte w\u00e4hlen Sie einen Wert aus
+
+# Common messages
+GML.validation.create=Die Informationen wurden aufgezeichnet.
+GML.validation.update=Die Informationen wurden aktualisiert.
+GML.validation.delete=Die Informationen wurden gel\u00f6scht.
