--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
@@ -325,3 +325,8 @@ GML.pagination.ScrollNextPages=>
 GML.pagination.ScrollPreviousPages=<
 GML.pagination.GoToPage=Page
 GML.internalDomain=Shared domain
+
+# Common messages
+GML.validation.create=The informations have been well recorded.
+GML.validation.update=The informations have been well updated.
+GML.validation.delete=The informations have been well deleted.
