Bug #3119. The calendar javascript widget is now moved from the Almanach component to the Silverpeas Core: it is provided by a Silverpeas javascript plugin built upon the JQuery framework; currently it uses the JQuery FullCalendar plugin for doing its work. The plugin can be included in JSP pages with the tag includePlugin of the generatorview taglib. The JQuery FullCalendar plugin is now in version 1.5.3 (previously it was in 1.5.1)

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
@@ -330,3 +330,4 @@ GML.internalDomain=Shared domain
 GML.validation.create=The informations have been well recorded.
 GML.validation.update=The informations have been well updated.
 GML.validation.delete=The informations have been well deleted.
+GML.Today=Today
