Bug #3119. Add new translation and CSS styles for the plugin silverpeas calendar

--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
@@ -338,3 +338,4 @@ GML.validation.create=Die Informationen wurden aufgezeichnet.
 GML.validation.update=Die Informationen wurden aktualisiert.
 GML.validation.delete=Die Informationen wurden gel\u00f6scht.
 GML.Today=Heute
+GML.Tomorrow=Morgen
