--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
@@ -331,3 +331,4 @@ GML.validation.create=The informations have been well recorded.
 GML.validation.update=The informations have been well updated.
 GML.validation.delete=The informations have been well deleted.
 GML.Today=Today
+GML.Tomorrow=Tomorrow
