on feature #2786, fixing some labels

--- a/config-core/src/main/config/properties/com/silverpeas/socialnetwork/multilang/socialNetworkBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/socialnetwork/multilang/socialNetworkBundle_de.properties
@@ -95,11 +95,11 @@ myProfile.tab.networks = Social networks
 myProfile.tab.settings = Voreinstellungen
 myProfile.tab.invitations = Einladungen
 
-myProfile.networks.linkedToSilverpeas = My Silverpeas account is already linked to this social network
-myProfile.networks.notLinkedToSilverpeas = This social network is not yet linked to my Silverpeas Account
-myProfile.networks.linkToMySilverpeasAccount = Link to my Silverpeas account
-myProfile.networks.unlinkFromMySilverpeasAccount = Do not link anymore to my Silverpeas account
-myProfile.networks.unlinkConfirmation = Are you sure you want to unlink this social network from your Silverpeas account ?
+myProfile.networks.yourAccount = Your account
+myProfile.networks.linkedToSilverpeas = is already linked to your profile
+myProfile.networks.notLinkedToSilverpeas = is not yet linked to your profile
+myProfile.networks.linkToMySilverpeasAccount = Link to my profile
+myProfile.networks.unlinkConfirmation = Are you sure you want to unlink this social network from your profile ?
 myProfile.networks.unlinkConfirmationTitle = Confirmation
 
 myProfile.invitations.received = Bekommen
