--- a/config-core/src/main/config/properties/com/silverpeas/socialnetwork/multilang/socialNetworkBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/socialnetwork/multilang/socialNetworkBundle_en.properties
@@ -98,7 +98,7 @@ myProfile.tab.invitations = Invitations
 myProfile.networks.yourAccount = Your account
 myProfile.networks.linkedToSilverpeas = is already linked to your profile
 myProfile.networks.notLinkedToSilverpeas = is not yet linked to your profile
-myProfile.networks.linkToMySilverpeasAccount = Link to my account
+myProfile.networks.linkToMySilverpeasAccount = Link to my profile
 myProfile.networks.unlinkConfirmation = Are you sure you want to unlink this social network from your profile ?
 myProfile.networks.unlinkConfirmationTitle = Confirmation
 
