closing feature #2703 preventing to add a field named like an existing ones

--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_de.properties
@@ -64,6 +64,7 @@ templateDesigner.facet = Facette
 templateDesigner.facet.warning = Damit die Facette in der Liste der Suchergebnisse erscheint, m\u00fcssen Sie manuell alle Anwendungen, die dieses Formular benutzen, neu indizieren.
 
 templateDesigner.js.incorrectName = darf sich nicht 'name' nennen. Verwenden Sie einen aussagekr\u00e4ftigen Namen.
+templateDesigner.js.nameAlreadyExist = There is already a field with this name. Please use another name for this new field.
 
 templateDesigner.addOption = Diese Option hinzuf\u00fcgen
 templateDesigner.updateOption = Diese Option \u00e4ndern
