--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
@@ -62,6 +62,7 @@ templateDesigner.facet = Facet
 templateDesigner.facet.warning = For the facet appears in the list of search results, you must manually re-index all applications that use this form.
 
 templateDesigner.js.incorrectName = must not be called 'name'. Use a more meaningful name.
+templateDesigner.js.nameAlreadyExist = There is already a field with this name. Please use another name for this new field.
 
 templateDesigner.addOption = Add this option
 templateDesigner.updateOption = Modify this option
