--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_fr.properties
@@ -62,6 +62,7 @@ templateDesigner.facet = Facette
 templateDesigner.facet.warning = Pour que la facette apparaisse dans la liste des r\u00e9sultats de recherche, vous devez r\u00e9indexer manuellement toutes les applications qui utilisent ce formulaire.
 
 templateDesigner.js.incorrectName = ne doit pas se nommer 'name'. Utilisez un nom plus explicite.
+templateDesigner.js.nameAlreadyExist = Il existe d\u00e9j\u00e0 un champ portant ce nom. Veuillez utiliser un autre nom pour ce nouveau champ.
 
 templateDesigner.addOption = Ajouter cette option
 templateDesigner.updateOption = Modifier cette option
