Feature #1836 : adding warnings on sensible application parameters

--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_de.properties
@@ -85,9 +85,9 @@ JSPP.roleDescription = Beschreibung der Rolle
 
 # erreurs
 MustContainsText = muss eingegeben werden
-ThisFormContains = Achtung, dieses Formular enth\u00e4lt 
-ContainsTooLargeText = darf nicht \u00fcbersteigen 
-NbMaxTextArea = 2000 
+ThisFormContains = Achtung, dieses Formular enth\u00e4lt
+ContainsTooLargeText = darf nicht \u00fcbersteigen
+NbMaxTextArea = 2000
 Characters = Zeichen
 JSPP.MustBeginsByHTTP = muss ein mit http:// beginnendes URL enthalten
 
@@ -99,7 +99,7 @@ JSPP.MessageSuppressionInstanceBegin = Sind Sie sicher, diese Anwendung l\u00f6s
 JSPP.MessageSuppressionInstanceEnd = \u003C--\\n
 
 # onglets roles
-JSPP.Manager = Bereich Verwalter 
+JSPP.Manager = Bereich Verwalter
 JSPP.admin = Verwalter
 JSPP.publisher = Herausgeber
 JSPP.writer = Redaktor
@@ -169,9 +169,13 @@ JSPP.SpaceAppearance = Aussehen
 JSPP.SpaceLook = Thema
 JSPP.WallPaper = Bandbild
 
-JSPP.inProgress =Wird bearbeitet !<br/>Bitte warten... 	  	 
-JSPP.parameters = Einstellungen 	  	 
-  	  	 
+JSPP.inProgress =Wird bearbeitet !<br/>Bitte warten...
+JSPP.parameters = Einstellungen
+
 JSPP.SpaceHomepage.URL.help = Mehrere Werte sind f\u00fcr das <b>URL</b>-Feld m\u00f6glich: <ul><li>Absolut Pfad. Beispiel: http://www.google.com</li><li>Interne Adresse. Beispiel: /admin/jsp/page.jsp (Kontext nicht angeben /silverpeas)</li><li>Interne Adresse zu einer anderen Web-Anwendung. Beispiel: <b>$</b>/weblib/pages/page.jsp (Beginnen mit $/<nom_application_web>)</li></ul>
 JSPP.spaceRecover = Rechte wiederherstellen
 JSPP.applications.add = Diese Anwendung hinzuf\u00fcgen
+
+Warning.dialog.confirmation.message.end = Do you confirm?
+Warning.hiddenComponent = Be careful, by checking this box you specify that the application not displayed in menus.
+Warning.publicComponent = Be careful, by checking this box you specify that the application is accessible to all users.
