--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_en.properties
@@ -23,7 +23,7 @@
 #
 JSPP.BackToMainSpacePage = Back to workspace homepage
 
-JSPP.homepageType = Type of startup page 
+JSPP.homepageType = Type of startup page
 
 JSPP.main = Main page
 JSPP.manageHomePage = Workspaces
@@ -42,7 +42,7 @@ JSPP.SpaceTemplate = Space templates
 JSPP.NoTemplate = Empty space
 JSPP.UPSpaceTemplateProfile = Select groups/users for the profile
 
-JSPP.welcome =  Welcome in the workspaces administration module 
+JSPP.welcome =  Welcome in the workspaces administration module
 
 JSPP.maintenanceTout = Silverpeas is in Maintenance mode!
 JSPP.maintenance = Maintenance mode:
@@ -84,16 +84,16 @@ JSPP.roleDescription = Role description
 
 # erreurs
 MustContainsText = must be completed
-ThisFormContains = Warning! This form contains 
-ContainsTooLargeText = must not contain more than 
-NbMaxTextArea = 2000 
+ThisFormContains = Warning! This form contains
+ContainsTooLargeText = must not contain more than
+NbMaxTextArea = 2000
 Characters = characters
 JSPP.MustBeginsByHTTP = must contain an URL starting with http://  or https://
 
 # messages
 JSPP.MessageSuppressionSpaceBegin = Do you really want to delete this space?\\n\\n-->
 JSPP.MessageSuppressionSpaceEnd = <--\\n
-JSPP.MessageSuppressionSpaceManager = Do you really want to delete these users? 
+JSPP.MessageSuppressionSpaceManager = Do you really want to delete these users?
 JSPP.MessageSuppressionInstanceBegin = Do you really want to delete this application?\\n\\n-->
 JSPP.MessageSuppressionInstanceEnd = <--\\n
 
@@ -107,10 +107,10 @@ JSPP.reader = Readers
 JSPP.Manager.help = The role "Space managers" only allows to delegate the administration of this space to any user.<br/>By default, a "space manager" has no rights to the applications of space.<br/>Be careful to not confuse this role with "Administrators" which applies well to applications of space.
 
 # Gestion de l'ordre
-JSPP.SpaceOrder = Move space 
+JSPP.SpaceOrder = Move space
 JSPP.SpacePlace = Move before the space
 JSPP.PlaceLast = Move to the end
-JSPP.ComponentOrder = Move application 
+JSPP.ComponentOrder = Move application
 JSPP.ComponentPlace = Move before the application
 
 # order space, application
@@ -120,7 +120,7 @@ JSPP.SpacePositionFirst = After space
 JSPP.SpacePositionLast = Before space
 
 # Copy/Cut/Paste application
-JSPP.CopyOf = Copy of 
+JSPP.CopyOf = Copy of
 
 # Deplacement de composant
 JSPP.SpaceIn = Move in the space
@@ -133,11 +133,11 @@ JSPP.movingInProgress = Move in progress...
 JSPP.BackupUnlimited = Backup/Restore applications
 JSPP.BackupSpace = Backup/Restore space's applications
 
-JSPP.ErrorComponentCreation = Error during the creation of the application 
-JSPP.ErrorComponentUpdate = Error during the updating of the application 
+JSPP.ErrorComponentCreation = Error during the creation of the application
+JSPP.ErrorComponentUpdate = Error during the updating of the application
 JSPP.ErrorComponentMessage = Check that another application of the space does not already have the same name!
-JSPP.ErrorSpaceCreation = Error during the creation of the space 
-JSPP.ErrorSpaceUpdate = Error during the updating of the space 
+JSPP.ErrorSpaceCreation = Error during the creation of the space
+JSPP.ErrorSpaceUpdate = Error during the updating of the space
 JSPP.ErrorSpaceMessage = Check that another space on the same level does not already have the same name!
 
 # Corbeille
@@ -175,3 +175,7 @@ JSPP.parameters = Parameters
 JSPP.SpaceHomepage.URL.help = Several values are possible for the <b>URL</b> field : <ul><li>Absolute address. Example : http://www.google.com</li><li>Internal address. Example : /admin/jsp/page.jsp (do not specify the web context /silverpeas)</li><li>Internal address into another web application. Example : <b>$</b>/weblib/pages/page.jsp (start with $/<web_application_name>)</li></ul>
 JSPP.spaceRecover = Recover rights
 JSPP.applications.add = Add this application
+
+Warning.dialog.confirmation.message.end = Do you confirm?
+Warning.hiddenComponent = Be careful, by checking this box you specify that the application not displayed in menus.
+Warning.publicComponent = Be careful, by checking this box you specify that the application is accessible to all users.
