--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_fr.properties
@@ -83,10 +83,10 @@ JSPP.creationInstance = Ajout d'une application
 JSPP.roleDescription = Description du r\u00f4le
 
 # erreurs
-MustContainsText = doit \u00eatre renseign\u00e9 
-ThisFormContains = Attention, ce formulaire contient 
-ContainsTooLargeText = ne doit pas exc\u00e9der 
-NbMaxTextArea = 2000 
+MustContainsText = doit \u00eatre renseign\u00e9
+ThisFormContains = Attention, ce formulaire contient
+ContainsTooLargeText = ne doit pas exc\u00e9der
+NbMaxTextArea = 2000
 Characters = caract\u00e8res
 JSPP.MustBeginsByHTTP = doit contenir une URL d\u00e9butant par http:// ou https://
 
@@ -98,7 +98,7 @@ JSPP.MessageSuppressionInstanceBegin = Etes-vous s\u00fbr(e) de vouloir supprime
 JSPP.MessageSuppressionInstanceEnd = <--\\n
 
 # onglets roles
-JSPP.Manager = Managers d'espace 
+JSPP.Manager = Managers d'espace
 JSPP.admin = Gestionnaires
 JSPP.publisher = Publieurs
 JSPP.writer = R\u00e9dacteurs
@@ -127,7 +127,7 @@ JSPP.ExistingComponentName = D\u00e9placement impossible... Une application port
 JSPP.movingInProgress = D\u00e9placement en cours...
 
 #  Copy/Cut/Paste component
-JSPP.CopyOf = Copie de 
+JSPP.CopyOf = Copie de
 
 # Sauvegarde
 JSPP.BackupUnlimited = Sauvegarder/Restaurer des applications
@@ -176,7 +176,6 @@ JSPP.SpaceHomepage.URL.help = Plusieurs valeurs sont possibles pour le champ <b>
 JSPP.spaceRecover = Recouvrer les droits
 JSPP.applications.add = Ajouter cette application
 
-Warning.dialog.confirmation.message.title = Confirmation
 Warning.dialog.confirmation.message.end = Confirmez-vous ?
 Warning.hiddenComponent = Attention, en cochant cette case, vous indiquez que l'application n'est pas visible dans les menus.
-Warning.publicComponent = Attention, en cochant cette case, vous indiquez que l'application est accessible par tous les utilisateurs.
+Warning.publicComponent = Attention, en cochant cette case, vous indiquez que l'application est accessible \u00e0 tous les utilisateurs.
