--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_de.properties
@@ -234,7 +234,7 @@ GML.mois10 = November
 GML.mois11 = Dezember
 
 # Contr\u00f4le JavaScript
-GML.ThisFormContains = Dieses Fomular enth\u00e4lt 
+GML.ThisFormContains = Dieses Fomular enth\u00e4lt
 GML.MustBeFilled = muss ausgef\u00fcllt werden
 GML.MustContainsNumber = muss eine Ganzzahl enthalten
 GML.MustContainsFloat = muss eine Zahl enthalten
@@ -243,7 +243,7 @@ GML.MustContainsPostDateTo = muss ein Datum enthalten, das sp\u00e4ter ist als
 GML.MustContainsPostOrEqualDateTo = muss ein datum enthalten, das sp\u00e4ter ist als oder gleich ist wie
 GML.MustContainsPostDate = muss ein Datum enthalten, das nach dem heutigen Datum liegt
 GML.MustContainsDateBetween1 = muss ein Datum enthalten zwischen dem
-GML.MustContainsDateBetween2 = und dem 
+GML.MustContainsDateBetween2 = und dem
 GML.MustContainsCorrectHour = muss eine korrekte Uhrzeit enthalten
 GML.MustContainsLettersAndDigitsOnly = sollte nur aus Buchstaben und Zahlen bestehen
 
@@ -269,11 +269,11 @@ GML.translationRemove =  Diese \u00dcbersetzung l\u00f6schen
 # Import CSV
 GML.csvFile = CSV Datei
 GML.ligne = - Reihe
-GML.colonne = Spalte 
+GML.colonne = Spalte
 GML.valeur = Wert
 GML.obligatoire = Dieses Feld ist obligatorisch
 GML.nbCarMax = Der Wert darf nicht \u00dcberschritten werden
-GML.nbCarMin = Der Wert muss mindestens 
+GML.nbCarMin = Der Wert muss mindestens
 GML.caracteres = Zeichen enthalten
 GML.errorCsvFile = Fehler! Mann kann nur Dateien hochladen, die die der Erweiterung .Csv haben
 
@@ -337,5 +337,6 @@ GML.selectAValue = Bitte w\u00e4hlen Sie einen Wert aus
 GML.validation.create=Die Informationen wurden aufgezeichnet.
 GML.validation.update=Die Informationen wurden aktualisiert.
 GML.validation.delete=Die Informationen wurden gel\u00f6scht.
+GML.confirmation.dialog.title = Best\u00E4tigung
 GML.Today=Heute
 GML.Tomorrow=Morgen
