--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
@@ -229,7 +229,7 @@ GML.mois10 = November
 GML.mois11 = December
 
 # Controle JavaScript
-GML.ThisFormContains = This form contains 
+GML.ThisFormContains = This form contains
 GML.MustBeFilled = must be filled
 GML.MustContainsNumber = must contain a number
 GML.MustContainsFloat = must contain a float
@@ -330,5 +330,6 @@ GML.internalDomain=Shared domain
 GML.validation.create=The informations have been well recorded.
 GML.validation.update=The informations have been well updated.
 GML.validation.delete=The informations have been well deleted.
+GML.confirmation.dialog.title = Confirmation
 GML.Today=Today
 GML.Tomorrow=Tomorrow
