--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_fr.properties
@@ -229,7 +229,7 @@ GML.mois10 = Novembre
 GML.mois11 = D\u00e9cembre
 
 # Contr\u00f4le JavaScript
-GML.ThisFormContains = Ce formulaire contient 
+GML.ThisFormContains = Ce formulaire contient
 GML.MustBeFilled = doit \u00eatre renseign\u00e9
 GML.MustContainsNumber = doit contenir un entier
 GML.MustContainsFloat = doit contenir un nombre
@@ -330,5 +330,6 @@ GML.internalDomain=Domaine mixte
 GML.validation.create=Les informations ont bien \u00e9t\u00e9 enregistr\u00e9es.
 GML.validation.update=Les informations ont bien \u00e9t\u00e9 mises \u00e0 jour.
 GML.validation.delete=Les informations ont bien \u00e9t\u00e9 supprim\u00e9es.
+GML.confirmation.dialog.title = Confirmation
 GML.Today=Aujourd'hui
 GML.Tomorrow=Demain
