closing feature #1037 now it is possible to move a space and its content (cut operation) same behavior have been implemented for components

--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_de.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_de.properties
@@ -46,11 +46,10 @@ JSPP.UPSpaceTemplateProfile = Die der Rolle zugewiesenen Gruppen/Benutzer w\u00e
 JSPP.welcome =  Willlommen im Bereichverwaltungs-Modul
 
 JSPP.maintenanceTout = Silverpeas befindet sich gesamthaft im Wartungs-Modus!
-JSPP.maintenance = Wartungs-Modus:
-JSPP.maintenanceStatus = Dieser Bereich befindet sich gegenw\u00e4rtig
-JSPP.maintenanceTxtModeOn = im Wartungs-Modus...
-JSPP.maintenanceModeOn = Aktiv
-JSPP.maintenanceModeOff = Deaktiviert
+JSPP.maintenanceStatus.0 = The space is not under maintenance
+JSPP.maintenanceStatus.1 = The space is down for maintenance because the entire platform is down for maintenance
+JSPP.maintenanceStatus.2 = The space is down for maintenance because one of its parents is down for maintenance
+JSPP.maintenanceStatus.3 = The space is down for maintenance
 JSPP.maintenanceModeToOn = Wartungs-Modus aktivieren
 JSPP.maintenanceModeToOff = Wartungs-Modus deaktivieren
 
@@ -65,13 +64,17 @@ JSPP.SpaceProfilePanelDeleteTitle = Anwender der Rolle l\u00f6schen
 JSPP.ComponentPanelCreateTitle = Eine Anwendung hinzuf\u00fcgen
 JSPP.ComponentPanelModifyTitle = Die Anwendung \u00e4ndern
 JSPP.ComponentPanelDeleteTitle = Die Anwendung l\u00f6schen
-JSPP.CopyComponent = Anwendung kopieren
-JSPP.PasteComponent = Einf\u00fcgen
+JSPP.component.copy = Anwendung kopieren
+JSPP.component.cut = Cut this application
+JSPP.component.paste = Einf\u00fcgen
 
 JSPP.SubSpacePanelCreateTitle = Einen Unter-Bereich erstellen
 JSPP.SpacePanelCreateTitle = Einen Bereich erstellen
 JSPP.SpacePanelModifyTitle = Bereich \u00e4ndern
 JSPP.SpacePanelDeleteTitle = Bereich l\u00f6schen
+JSPP.space.copy = Copy space
+JSPP.space.cut = Cut space
+JSPP.space.paste = Paste space
 
 JSPP.Choose = W\u00e4hlen Sie...
 JSPP.ModifyStartPage = Startseite \u00e4ndern
