--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_en.properties
@@ -44,14 +44,13 @@ JSPP.UPSpaceTemplateProfile = Select groups/users for the profile
 
 JSPP.welcome =  Welcome in the workspaces administration module 
 
-JSPP.maintenanceTout = Silverpeas is in Maintenance mode!
-JSPP.maintenance = Maintenance mode:
-JSPP.maintenanceStatus = This space is currently
-JSPP.maintenanceTxtModeOn = in Maintenance mode...
-JSPP.maintenanceModeOn = Activated
-JSPP.maintenanceModeOff = De-activated
-JSPP.maintenanceModeToOn = Activate Maintenance mode
-JSPP.maintenanceModeToOff = De-activate Maintenance mode
+JSPP.maintenanceTout = The platform is down for maintenance!
+JSPP.maintenanceStatus.0 = The space is not under maintenance
+JSPP.maintenanceStatus.1 = The space is down for maintenance because the entire platform is down for maintenance
+JSPP.maintenanceStatus.2 = The space is down for maintenance because one of its parents is down for maintenance
+JSPP.maintenanceStatus.3 = The space is down for maintenance
+JSPP.maintenanceModeToOn = Activate maintenance mode
+JSPP.maintenanceModeToOff = Deactivate maintenance mode
 
 JSPP.ProfilePanelCreateTitle = Add a role
 JSPP.ProfilePanelModifyTitle = Modify a role
@@ -62,15 +61,19 @@ JSPP.SpaceProfilePanelModifyTitle = Modify users for the profile
 JSPP.SpaceProfilePanelDeleteTitle = Delete users for the profile
 
 JSPP.ComponentPanelCreateTitle = Add an application
-JSPP.ComponentPanelModifyTitle = Modify an application
-JSPP.ComponentPanelDeleteTitle = Delete an application
-JSPP.CopyComponent = Copy the application
-JSPP.PasteComponent = Paste
+JSPP.ComponentPanelModifyTitle = Modify this application
+JSPP.ComponentPanelDeleteTitle = Delete this application
+JSPP.component.copy = Copy this application
+JSPP.component.cut = Cut this application
+JSPP.component.paste = Paste application
 
 JSPP.SubSpacePanelCreateTitle = Create a sub-space
 JSPP.SpacePanelCreateTitle = Create a space
-JSPP.SpacePanelModifyTitle = Modify a space
-JSPP.SpacePanelDeleteTitle = Delete a space
+JSPP.SpacePanelModifyTitle = Modify this space
+JSPP.SpacePanelDeleteTitle = Delete this space
+JSPP.space.copy = Copy this space
+JSPP.space.cut = Cut this space
+JSPP.space.paste = Paste space
 
 JSPP.Choose = Select...
 JSPP.ModifyStartPage = Modify the homepage
@@ -88,7 +91,7 @@ ThisFormContains = Warning! This form contains
 ContainsTooLargeText = must not contain more than 
 NbMaxTextArea = 2000 
 Characters = characters
-JSPP.MustBeginsByHTTP = must contain an URL starting with http://  or https://
+JSPP.MustBeginsByHTTP = must contain an URL starting with http:// or https://
 
 # messages
 JSPP.MessageSuppressionSpaceBegin = Do you really want to delete this space?\\n\\n-->
@@ -107,10 +110,10 @@ JSPP.reader = Readers
 JSPP.Manager.help = The role "Space managers" only allows to delegate the administration of this space to any user.<br/>By default, a "space manager" has no rights to the applications of space.<br/>Be careful to not confuse this role with "Administrators" which applies well to applications of space.
 
 # Gestion de l'ordre
-JSPP.SpaceOrder = Move space 
+JSPP.SpaceOrder = Modify space rank 
 JSPP.SpacePlace = Move before the space
 JSPP.PlaceLast = Move to the end
-JSPP.ComponentOrder = Move application 
+JSPP.ComponentOrder = Modify application rank
 JSPP.ComponentPlace = Move before the application
 
 # order space, application
