--- a/config-core/src/main/config/properties/com/silverpeas/authentication/multilang/forgottenPasswordMail_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/authentication/multilang/forgottenPasswordMail_en.properties
@@ -30,3 +30,11 @@ error.subject=Password reset (error)
 error.content=A technical error has occurred :<br/>{error}
 admin.subject=Password reset (request)
 admin.content=A message has been sent to you by {userName} ({email}) :<br/><br/>{message}
+
+screen.title.reinitRequested = Reset your password
+screen.title.reinitDone = Password reset
+screen.invalidLogin = There is no account for this login. <br/> Please check it...
+screen.reinitRequested = An email has been sent to the email address associated with your account. This message explains how to get a new password. <br/> Some time may be required prior to receiving this message. Remember to verify the message has not gone into your spam folder.
+screen.reinitNotAllowed = Resetting your password is not allowed. <br/> Please contact your administrator ...
+screen.reinitDone = An email has been sent to the email address associated with your account. This message contains your new password. <br/> Some time may be required prior to receiving this message. Remember to verify the message has not gone into your spam folder.
+screen.reinitError = Resetting your password failed. <br/> Please contact your administrator ...
