--- a/config-core/src/main/config/properties/com/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_fr.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_fr.properties
@@ -123,3 +123,8 @@ JDP.importSelected = Importer les utilisateurs s\u00E9lectionn\u00E9s
 
 JDP.sendEmail = Envoyer les param\u00E8tres de connexion par email :
 JDP.createAccountNotifTitle = Silverpeas - Identifiant de votre compte
+
+JDP.userDomainQuotaMaxCount = Nombre maximum d'utilisateurs (0 pour un nombre illimit\u00e9)
+JDP.userDomainQuotaMaxCountError = Le nombre maximum d'utilisateurs renseign\u00e9 pour le domaine est incorrect.
+JDP.userDomainQuotaCurrentCount = {0} {0,choice, 1#utilisateur enregistr\u00e9| 1<utilisateurs enregistr\u00e9s}
+JDP.userDomainQuotaFull = Le nombre maximum d'utilisateurs est atteint
