--- a/config-core/src/main/config/web/weblib.war/repositorySharing/bundle/messages_de.properties
+++ b/config-core/src/main/config/web/weblib.war/repositorySharing/bundle/messages_de.properties
@@ -1,4 +1,4 @@
-folder.empty = Dieses Thema ist leer!
+folder.empty = Dieses Datei ist leer!
  
 expiration = Ablaufdatum
 expiration.unlimited = Unbegrenzt
