--- a/config-core/src/main/config/web/weblib.war/repositorySharing/bundle/messages_fr.properties
+++ b/config-core/src/main/config/web/weblib.war/repositorySharing/bundle/messages_fr.properties
@@ -1,4 +1,4 @@
-folder.empty = Ce th\u00e8me est vide !
+folder.empty = Ce dossier est vide !
 
 expiration = Date de fin de validit\u00e9
 expiration.unlimited = Illimit\u00e9e
