--- a/config-core/src/main/config/properties/org/silverpeas/importExport/multilang/importExportBundle_en.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/importExport/multilang/importExportBundle_en.properties
@@ -23,7 +23,7 @@
 #
 importExport.document = Document
 importExport.documents = Documents
-importExport.empty = This topic contains 0 publications
+importExport.empty = This folder is empty
 importExport.index = Index of
 
 //Kmax :
