--- a/config-core/src/main/config/properties/org/silverpeas/importExport/multilang/importExportBundle_fr.properties
+++ b/config-core/src/main/config/properties/org/silverpeas/importExport/multilang/importExportBundle_fr.properties
@@ -23,7 +23,7 @@
 #
 importExport.document = Document
 importExport.documents = Documents
-importExport.empty = Ce thème ne contient pas de publications
+importExport.empty = Ce dossier ne contient pas de publications
 importExport.index = Sommaire de
 
 //Kmax :
