fixing bug #2057 Empty folders were mismanaged, generate Javascript errors so treeview was not completely displayed Content of Wysiwyg fields of forms were not correctly exported Character # in name of folder or publication must be encoded

--- a/config-core/src/main/config/properties/com/silverpeas/importExport/multilang/importExportBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/importExport/multilang/importExportBundle_en.properties
@@ -23,7 +23,7 @@
 #
 importExport.document = Document
 importExport.documents = Documents
-importExport.empty = This topic contains 0 publications
+importExport.empty = This folder is empty
 importExport.index = Index of
 
 //Kmax :
